# src/main/resources/openapi.yaml
@@ -4,8 +4,9 @@ info:
   version: 1.0.0
 
 paths:
-  /products:
+  /api/products:
     get:
+      operationId: getProducts
       summary: Get all products
       responses:
         '200':
@@ -17,6 +18,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Product'
     post:
+      operationId: createProduct
       summary: Create a new product
       requestBody:
         required: true
@@ -32,8 +34,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Product'
 
-  /products/{id}:
+  /api/products/{id}:
     get:
+      operationId: getProductById
       summary: Get product by ID
       parameters:
         - name: id
@@ -51,6 +54,7 @@ paths:
         '404':
           description: Product not found
     put:
+      operationId: updateProduct
       summary: Update a product
       parameters:
         - name: id
@@ -70,6 +74,7 @@ paths:
         '404':
           description: Product not found
     delete:
+      operationId: deleteProduct
       summary: Delete a product
       parameters:
         - name: id
